File browser: show folders first, then files. Patch by <dystopticus@gmx.net>,  reviewed by nhn, tested by me.

BUG: 226599